# pydap4

./: CMakeLists.txt  setup.py
src/core/: CMakeLists.txt  array.cpp  attr_table.cpp  base_type.cpp  base_type_factory.cpp  byte.cpp  constructor.cpp  crc.cpp  d4_attributes.cpp  d4_base_type_factory.cpp  d4_dimension.cpp  d4_enum.cpp  d4_enum_defs.cpp  d4_group.cpp  d4_maps.cpp  d4_opaque.cpp  d4_rvalue.cpp  d4_sequence.cpp  das.cpp  data_dds.cpp  dds.cpp  exceptions.cpp  float32.cpp  float64.cpp  grid.cpp  int16.cpp  int32.cpp  int64.cpp  int8.cpp  main.cpp  object_type.cpp  optional.hpp  sequence.cpp  str.cpp  type.cpp  uint16.cpp  uint32.cpp  uint64.cpp  url.cpp  vector.cpp  (+1 more)
src/core/client/: connect.cpp  response.cpp
src/core/server/: ancillary.cpp
src/pydap4/: exceptions.py
tests/: test_attr_table.py  test_base_type.py  test_crc.py  test_types.py
